# easybind

./: .gitignore  CMakeLists.txt  NOTICE  README.md  RELEASING.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
.old/src_cpp/pymergetic/easybind/: asyncio_asio.hpp  bind_utils.hpp  describe.hpp  import.hpp  registry.cpp
.old/src_cpp/pymergetic/easybind/sample/: __cpp__.cpp  __init__.hpp
.old/src_py/pymergetic/easybind/: __init__.py
.old/src_py/pymergetic/easybind/sample/: __cpp__.pyi
cmake/: easybindConfig.cmake.in  easybind_dependencies.cmake  easybind_pip.cmake
scripts/: clangd-update.sh  release_tag.py  wait_pypi_release.py
src/easybind/: __init__.cpp  bind.hpp
src/easybind/devtools/: __init__.py  pin_pyproject.py  release_helpers.py  release_tag.py  wait_pypi.py
src/easybind/module/: __init__.cpp  node.cpp  node.hpp  node__init__.cpp  ns_module.hpp
src/easybind/sample/: __init__.cpp  sample.cpp  sample.hpp
src_bind/pymergetic/easybind/: module.cpp
src_bind/pymergetic/easybind/sample/: bind.cpp  module.cpp
src_cpp/pymergetic/easybind/: __cpp__.cpp  __init__.cpp  __init__.hpp  asyncio.hpp  asyncio_asio.hpp  bind.hpp  bind_utils.hpp  enum_utils.hpp  exceptions.hpp  export.hpp  module.cpp  prelude.hpp  refresh.cpp  refresh.hpp  registry.cpp  registry.hpp
src_cpp/pymergetic/easybind/module/: __init__.cpp  __init__.hpp  hooks.cpp  hooks.hpp  hooks_nb.cpp  hooks_nb.hpp  node.cpp  node.hpp  node__init__.cpp  ns_module.hpp
src_cpp/pymergetic/easybind/sample/: __cpp__.cpp  __init__.cpp  __init__.hpp  sample.cpp  sample.hpp
src_cpp/pymergetic/easybind/version/: __cpp__.cpp  __init__.cpp  __init__.hpp
src_py/pymergetic/easybind/: __init__.py  __init__.pyi  __project__.py  sample.pyi
src_py/pymergetic/easybind/module/: __init__.pyi
src_py/pymergetic/easybind/sample/: __init__.py  __main__.py  _sample.pyi
src_py/pymergetic/easybind/version/: __init__.py
tests/: test_sample.py
