[build-system]
requires = ["scikit-build-core>=0.10", "setuptools-scm>=8", "nanobind>=2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "easybind"
dynamic = ["version"]
description = "Self-registering nanobind helpers (import as easybind)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "PymergeticOS Maintainers", email = "raudzus@pymergetic.com" }
]
keywords = ["easybind", "nanobind", "bindings", "pymergetic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pymergetic/easybind"
Repository = "https://github.com/pymergetic/easybind"
Issues = "https://github.com/pymergetic/easybind/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

# Linux wheels for CI: see .github/workflows/publish.yml
[tool.cibuildwheel]
# official glibc policy with quay.io/pypa/manylinux_2_28_x86_64 (PEP 600 manylinux_2_28_x86_64).
build = "cp311-* cp312-* cp313-* cp314-*"
# Host runner is x86_64; skip musllinux so only manylinux_* wheels are produced.
skip = "*musllinux*"
manylinux-x86_64-image = "manylinux_2_28"
build-verbosity = 1

[tool.cibuildwheel.linux]
# scikit-build-core wants CMake >= 3.25; pin if the manylinux image is older.
before-build = [
    "python -m pip install --upgrade pip",
    "python -m pip install 'cmake>=3.25' ninja",
]
# NB_SHARED ships libnanobind.so in the wheel; repair must run a current auditwheel
# with an explicit PEP 600 plat tag (see pypa/auditwheel#531).
# Verbose must be a global flag: `auditwheel -v repair`, not `auditwheel repair -v`.
repair-wheel-command = "python -m pip install -q --upgrade 'auditwheel>=6.4' && python -m auditwheel -v repair --plat manylinux_2_28_x86_64 -w {dest_dir} {wheel}"
test-requires = ["pytest>=7.0.0"]
test-command = "python -m pytest {project}/tests -q"

[tool.scikit-build]
cmake.version = ">=3.25"
logging.level = "INFO"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# Persistent CMake tree: `pip install -e .` / `uv pip install -e .` writes
# `build/compile_commands.json` for clangd (see `.clangd`).
build-dir = "build"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"

[tool.scikit-build.wheel]
packages = { "easybind" = "src/easybind" }

# Version comes from Git tags (see RELEASING.md). Build writes src/easybind/_version.py.
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"
root = "."
version_file = "src/easybind/_version.py"
